fix + add dark mode

--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+html {
+  color-scheme: light dark;
+  background-color: canvas;
+  color: canvastext;
+}
+
 :root {
     --color-accent: oklch(65% 50% 0);
   }
@@ -10,14 +16,17 @@ body {
     max-width: 100ch;
     margin-inline: auto;
     padding: 1rem;
+    background-color: Canvas;
+    color: CanvasText;
   }
 
-nav{
+  nav{
     display: flex;
     margin-bottom: 1rem;
     border-bottom-width: 1px;
     border-bottom-style: solid;
-    border-bottom-color: oklch(80% 3% 200);
+    --border-color: oklch(50% 10% 200 / 40%);
+    border-bottom-color: var(--border-color);
   }
 
 nav a{
@@ -29,15 +38,15 @@ nav a{
   }
 
 nav a:hover {
-    background-color: oklch(from var(--color-accent) 95% 5% h);
-    border-bottom: 0.4em solid var(--color-accent);
+  background-color: color-mix(in oklch, var(--color-accent), Canvas 85%);
+  border-bottom: 0.4em solid var(--color-accent);
     padding-bottom: 0.1em;
   }  
 
 nav a.current {
     border-bottom-width: 0.4em;
     border-bottom-style: solid;
-    border-bottom-color: oklch(80% 3% 200);
+    border-bottom-color: var(--border-color);
     padding-bottom: 0.1em;
   }
   
@@ -47,7 +56,7 @@ form {
     gap: 1em;
   }
   
-label {
+form label {
     display: contents;
   }
   
@@ -129,6 +138,14 @@ button {
     padding: 0.5em 1em;
     border-radius: 4px;
 }
+.color-scheme {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  font-size: 80%;
+  font-family: inherit;
+}
+
   
   
 
